@@ -26,6 +26,8 @@ class TimeBroadcastTask extends BaseTask
 
     private $dots = "";
 
+    private $emoji = 0;
+
     public function onRun(int $currentTick)
     {
         if ($this->getPlugin()->getConfig()->get("show-prisoner-timer") !== false) {
@@ -38,7 +40,12 @@ class TimeBroadcastTask extends BaseTask
                     } else {
                         $this->dots = "";
                     }
-                    $bail_dis = "&2" . $this->getPlugin()->getMessage("timer.broadcast.bail") . ": &d" . ($this->getPlugin()->getEco() !== null && $this->getPlugin()->getConfig()->get("allow-bail") ? ($this->getPlugin()->isJailTimeInfinite(strtolower($player->getName())) !== false ? $this->getPlugin()->getMessage("timer.broadcast.notallowed") : "$" . ($this->getPlugin()->prisoner_time[strtolower($player->getName())] * ($this->getPlugin()->getConfig()->get("bail-per-second")))) : $this->getPlugin()->getMessage("timer.broadcast.disabled") . " ^o^");
+                    if ($this->emoji < 15) {
+                        $this->emoji = $this->emoji + 1;
+                    } else {
+                        $this->emoji = 0;
+                    }
+                    $bail_dis = "&2" . $this->getPlugin()->getMessage("timer.broadcast.bail") . ": &d" . ($this->getPlugin()->getEco() !== null && $this->getPlugin()->getConfig()->get("allow-bail") ? ($this->getPlugin()->isJailTimeInfinite(strtolower($player->getName())) !== false ? $this->getPlugin()->getMessage("timer.broadcast.notallowed") : "$" . ($this->getPlugin()->prisoner_time[strtolower($player->getName())] * ($this->getPlugin()->getConfig()->get("bail-per-second")))) : ($this->getPlugin()->getMessage("timer.broadcast.disabled") . ($this->emoji < 8 ? " ^o^" : " ")));
                     if (isset($this->getPlugin()->prisoner_time[strtolower($name)])) {
                         $time = $this->getPlugin()->prisoner_time[strtolower($name)];
                         $seconds = $time;
